# publisher-marketplaces-product

./: .coveragerc  .env.example  .gitignore  .pip-audit.toml  .pre-commit-config.yaml  .semgrep.yml  ARCHITECTURE.md  GIT_SETUP.md  LICENSE  Makefile  PRODUCT_TASKS_ENDPOINT.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  conftest.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: quality.yml
requirements/: base.txt  dev.txt
scripts/: check-links.sh  quality.sh  security.sh  test.sh
src/: __init__.py
src/apps/: __init__.py
src/apps/ai_assistant/: apps.py  services.py  urls.py  views.py
src/apps/core/: __init__.py  models.py
src/apps/marketplaces/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/apps/marketplaces/migrations/: 0001_initial.py  0002_add_async_publication_task.py
src/apps/products/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py
src/apps/webhooks/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/apps/webhooks/migrations/: 0001_initial.py
src/config/: __init__.py  celery.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  local.py  test.py
tests/: README.md  factories.py  test_basic.py  test_factories.py  test_simple.py  test_webhook_error_handling.py
tests/apps/: __init__.py
tests/apps/ai_assistant/: __init__.py  test_services.py
tests/apps/core/: test_models.py
tests/apps/marketplaces/: __init__.py  test_async_publication.py  test_async_views.py  test_publishers.py  test_services.py  test_tasks.py  test_views.py
tests/apps/products/: __init__.py  test_models.py  test_tasks.py  test_views.py
tests/apps/webhooks/: __init__.py  test_models.py  test_services.py  test_tasks.py
tests/integration/: test_marketplace_integration.py  test_product_workflow.py
tests/workflows/: test_celery_workflows.py
